--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
-project_website=
-project_scm=
+group=ru.shadam.spring-boot
+version=0.1
 license=MIT
-license_url=
+description=Spring-boot-starter for spring-social-vkontakte
+projectLabels=spring-boot-starter,spring-social,spring-social-vkontakte,vkontakte
+projectId=social-vkontakte-spring-boot-starter
 developerId=saladinkzn
 developerName=Timur Shakurov
