--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,7 @@ projectLabels=spring-boot-starter,spring-social,spring-social-vkontakte,vkontakt
 projectId=social-vkontakte-spring-boot-starter
 developerId=saladinkzn
 developerName=Timur Shakurov
+
+springBootVersion=1.3.1.RELEASE
+springSocialVersion=1.1.4.RELEASE
+springSocialVkontakteVersion=1.1.0.BUILD-SNAPSHOT
