--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
   repositories {
-    maven { url 'http://repo.spring.io/plugins-release' }
     jcenter()
+    maven { url 'http://repo.spring.io/plugins-release' }
   }
 
   dependencies {
@@ -12,6 +12,7 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'propdeps'
 
 sourceCompatibility = '1.6'
 targetCompatibility = '1.6'
