--- a/publish.gradle
+++ b/publish.gradle
@@ -40,6 +40,7 @@ publishing {
     mavenJava(MavenPublication) {
       pom.withXml {
         asNode().with {
+          appendNode('name', rootProject.name)
           appendNode('description', rootProject.description)
           appendNode('url', rootProject.project_website)
           appendNode('scm').with {
